timed (2.23) unstable; urgency=low

  * Fixes: NB#202276 - removed bogus token request
  * Script grepping and demangling binaries 

 -- Ilya Dogolazky <ilya.dogolazky@nokia.com>  Thu, 04 Nov 2010 00:06:12 +0200

timed (2.22) unstable; urgency=low

  * using new qmlog API
  * Fixes: NB#178813 - syslog verbose logging
  * Fixes: NB#186446 - logging in pr image

 -- Ilya Dogolazky <ilya.dogolazky@nokia.com>  Mon, 01 Nov 2010 00:05:09 +0200

timed (2.21) unstable; urgency=low

  * logging test
  * Fixes: NB#199815 - Alarm notifications are not displayed when the time and date is changed to the previous date

 -- Ilya Dogolazky <ilya.dogolazky@nokia.com>  Wed, 27 Oct 2010 17:07:24 +0300

timed (2.20) unstable; urgency=low

  * dst change signal

 -- Ilya Dogolazky <ilya.dogolazky@nokia.com>  Mon, 25 Oct 2010 17:01:55 +0300

timed (2.19) unstable; urgency=low

  * new timed-voland interface triggereing many events at once

 -- Ilya Dogolazky <ilya.dogolazky@nokia.com>  Tue, 19 Oct 2010 14:21:11 +0300

timed (2.18) unstable; urgency=low

  * Backup/restore
  * Customization

 -- Ilya Dogolazky <ilya.dogolazky@nokia.com>  Fri, 01 Oct 2010 10:03:49 +0300

timed (2.17) unstable; urgency=low

  * More credentials and security stuff
  * Fixes: NB#165606 - invalid read in nanotime arithmetics
  * Removed plenty of not used code

 -- Ilya Dogolazky <ilya.dogolazky@nokia.com>  Fri, 01 Oct 2010 00:34:25 +0300

timed (2.16) unstable; urgency=low

  * Dummy function Event::setBackupFlag() added to library
  * Skipped 2.15 version due to dashboard mess

 -- Ilya Dogolazky <ilya.dogolazky@nokia.com>  Thu, 23 Sep 2010 13:31:03 +0300

timed (2.14+nmu2) unstable; urgency=low

  * When timed is performing execute or dbus actions, the credentials
    of the process that added the event are used.

 -- Simo Piiroinen <simo.piiroinen@nokia.com>  Thu, 16 Sep 2010 11:14:03 +0300

timed (2.14+nmu1) unstable; urgency=low

  * Fixes: NB#187991 - In Clock application the backed up alarms are