@@ -2,8 +2,9 @@ timed (2.23) unstable; urgency=low
 
   * Fixes: NB#202276 - removed bogus token request
   * Script grepping and demangling binaries 
+  * reporting isatty(2) value
 
- -- Ilya Dogolazky <ilya.dogolazky@nokia.com>  Thu, 04 Nov 2010 00:06:12 +0200
+ -- Ilya Dogolazky <ilya.dogolazky@nokia.com>  Thu, 04 Nov 2010 00:10:35 +0200
 
 timed (2.22) unstable; urgency=low
 
